--- a/src/assets/styles/Services.css
+++ b/src/assets/styles/Services.css
@@ -16,7 +16,7 @@
     font-size: 3rem;
     font-weight: 700;
     text-align: center;
-    color: #aaa;
+    color: #FFFFFF;
     margin-bottom: 50px;
     background: #aaa;
     -webkit-background-clip: text;
@@ -52,7 +52,7 @@
 
 /* Card Styles */
 .card {
-    background-color: #000000;
+    background-color: #b897b4;
     border: 1px solid #ddd;
     border-radius: 12px;
     padding: 25px;
@@ -72,7 +72,6 @@
     width: 56px;
     height: 56px;
     border-radius: 50%;
-    background-color: rgba(245, 158, 11, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,7 +79,7 @@
 }
 
 .card-icon .icon {
-    color: #f59e0b;
+    color: #eeb7cd;
     width: 28px;
     height: 28px;
 }
